<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.asus.hackerearth.mba">
    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:padding="10dp"
        android:rowCount="4"
        android:layout_weight="8">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:onClick="mbaOne"
            android:layout_rowWeight="1"
            app:cardElevation="20dp"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:src="@drawable/ic_today_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:text="@string/MBA1"
                    android:textColor="#303F9F"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="mbaTwo"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="20dp"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:src="@drawable/ic_today_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:text="@string/MBA2"
                    android:textColor="#303F9F"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="mbaThree"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="20dp"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:src="@drawable/ic_today_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:text="@string/MBA3"
                    android:textColor="#303F9F"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>






    </GridLayout>

</LinearLayout>
